infra/k8s/verification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verification-service
  namespace: supplychain-auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: verification-service
  template:
    metadata:
      labels:
        app: verification-service
    spec:
      containers:
        - name: verification-service
          image: dinesh1218/verification-service:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: verification-service
  namespace: supplychain-auth
spec:
  selector:
    app: verification-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
