infra/k8s/zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: supplychain-auth
  labels:
    app: zookeeper
spec:
  ports:
    - port: 2181
      name: client
    - port: 2888
      name: follower
    - port: 3888
      name: election
  clusterIP: None
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper
  namespace: supplychain-auth
spec:
  serviceName: zookeeper
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper:3.8
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 2181
              name: client
            - containerPort: 2888
              name: follower
            - containerPort: 3888
              name: election
          volumeMounts:
            - name: zookeeperdata
              mountPath: /bitnami/zookeeper
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: zookeeperdata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs-sc
        resources:
          requests:
            storage: 5Gi
